--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -37,6 +37,18 @@
     </div><!-- results-div -->
   </div><!-- homepage-container -->
 
+  <div class="container">
+    <div class="footer" role="contentinfo">
+
+      <ul class="footer-links float-right">
+        <li>Made with <span class="glyphicon glyphicon-heart" aria-hidden="true"></span> by Olivia Bettaglio</li>
+        <li>May 2017</li>
+        <li><a href="https://linkedin.com/in/obettaglio">LinkedIn</a></li>
+        <li><a href="https://github.com/obettaglio">GitHub</a></li>
+      </ul>
+    </div>
+  </div>
+
   <script src="https://code.jquery.com/jquery.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <script src="/static/homepage.js"></script>
